examples/test/testpolicy19123.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19123
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key38: value2
      key3: value0
      key10: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value22
      podSelector:
        matchLabels:
          key46: value15
